--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "type": "git",
         "url": "https://github.com/Evoniuk/Real-Retro"
     },
+    "icon": "images/icon.png",
     "engines": {
         "vscode": "^1.54.0"
     },
